fixed heading text spacing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1{
     font-family:'Press Start 2P', cursive;
     font-size:30pt;
     color:#EEEEEE;
+    line-height:50px;
     width:800px;
     height:100px;
     margin-left:auto;
